# 3D-Scanning-Face-Reconstruction

./: .gitignore  CMakeList.txt  CMakeLists.txt  FaceModel.h  ICPOptimizer.h  ProcrustesAligner.h  README.md  SimpleMesh.h  landmark.cpp  main.cpp
data/: kp_inds.csv  meanshape.csv  source_mesh.ply  target_mesh.ply  tri.csv
dataset/: cloud_mesh.ply  image_1.txt
glfw/: INSTALL_RECEIPT.json
glfw/include/GLFW/: .glfw3.h.swp
glfw/lib/pkgconfig/: glfw3.pc
include/: 3dOdev.h  BridgeSparseDense.h  DataHandler.h  FaceModel.h  FreeImageHelper.h  ICPOptimizer.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  project3dtopixel.h
landmarks/: deneme.txt
sample_face/: expression  expression.csv  expression_smile.csv  procrusted_face.off  random.off  result.off  transformed_model.off
src/: project3dtopixel.cpp
src/optimal_nonrigid_icp/: main.cpp
